# kwg-quality-checks

./: .gitignore  README.md  config.json  pyproject.toml
.github/workflows/: fomatting.yml
quality_checks/: config.py  query_paginator.py
tests/: test_config.py  test_knowledge_explorer.py  test_query_paginator.py  test_zipcodes.py
