# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quality_tests"
version = "1.0.0"
description = "Graph quality checks through SPARQL queries"
readme = "README.md"
authors = ["Thomas Thelen <tommythelen@gmail.com>"]
license = "Apache Software License 2.0"
repository = "https://github.com/quality_tests/quality_tests"
homepage = "https://github.com/quality_tests/quality_tests"

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"quality_tests" = "quality_tests.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.3.0"
SPARQLWrapper = "2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.0"
mypy-extensions = "^1.0.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-html = "^3.2.0"
pytest-cov = "^4.1.0"
flake518 = "^1.6.0"


[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 88
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | venvv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 88
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true
skip = [".gitignore", "venv", "venvv", ".venv"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.10"
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["venv", "tests", ".venv"]

[tool.flake8]
statistics=true
max-line-length=88
doctests=true
exclude=[".git", "__pypackages__", ".vscode", ".mypy_cache", "venvv", ".venv"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["quality_checks"]

[coverage.paths]
source = "quality_checks"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
